# barca

./: .gitignore  后端架构设计文档.md  完整架构设计文档.md  接口文档.txt  架构设计文档.md  需求文档.md
ai_server/: config.py  pyproject.toml  test_simple.py
ai_server/ai_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_server/app/: main.py  services.py
ai_server/app/personas/: confucius.md  default.md  einstein.md  harrypotter.md  marie-curie.md  shakespeare.md  socrates.md
ai_server/app/support/: persona.py  prompt.py
ai_server/app/vendors/: mock_llm.py  openai_llm.py
api-server/: pom.xml
api-server/eureka-server/: pom.xml
api-server/gateway-server/: pom.xml
api-server/provider/: pom.xml
api-server/provider/src/main/resources/: application.yml
frontend/: index.html  package.json  vite.config.js
frontend/src/: main.js
frontend/src/services/: api.js
frontend/src/stores/: characters.js  chat.js
frontend/src/styles/: main.scss  variables.scss
frontend/src/utils/: voiceChat.js
frontend/src/views/: Chat.vue  Home.vue
frontend_new/: AUDIO_PROCESSING_GUIDE.md  vite.config.js
frontend_new/public/images/: README.md
frontend_new/src/: main.js
frontend_new/src/stores/: chat.js
frontend_new/src/utils/: audioExample.js
frontend_new/src/views/: Chat.vue  Home.vue
new_frontend/frontend/: AUDIO_BASE64_GUIDE.md  index.html  package-lock.json
new_frontend/frontend/src/: App.vue
new_frontend/frontend/src/components/: PlaceholderImage.vue
new_frontend/frontend/src/services/: api.js
new_frontend/frontend/src/utils/: audioDecoder.js  serverCheck.js  voiceChat.js
(+22 files in other folders)
