[project]
name = "ai_server"
version = "0.1.0"
description = "Minimal AI server for role-play streaming chat"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=1.8.2",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "qiniu>=7.11.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_server*"]

[tool.uvicorn]
factory = false


